--- a/pangan_marketplace/marketplace/templates/base.html
+++ b/pangan_marketplace/marketplace/templates/base.html
@@ -12,6 +12,13 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container1">
     <a class="navbar-brand" href="/">Pangan Market</a>
+    {% if user.is_authenticated %}
+    <div style="text-align:right; padding:10px;">
+        <a class="cart" href="{% url 'cart_detail' %}">
+            🛒 Cart ({{ cart_item_count }})
+        </a>
+    </div>
+    {% endif %}
     <div class="ms-auto">
       {% if user.is_authenticated %}
         <span class="badge text-bg-primary">Hi, {{ user.email }}</span>
